--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 	
-	<div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-4"></div>
 
@@ -13,16 +13,14 @@
 				<span class="icon-bar"></span>
 			</button>
 			
-		</div>
+	</div>
 
-    
-		 <a class="navbar-brand" href="#">
+	  <a class="navbar-brand" >
 		  
-				<span ><i class="fa fa-rebel" style="color: white">カジュアル英語</i></span>
+		 <span ><i class="fa fa-rebel" style="color: white">カジュアル英語</i></span>
 				
-		</a>
+	  </a>
 		
-
 	<ul class="nav navbar-nav">
 			 
 	 <li><form method="get" action="/dynamic_pages/e100_seek">
@@ -30,29 +28,20 @@
               <input id="result_text2" type="text"  placeholder="検索キーワードを入力" name="fstr" /> 
               <input id="result_btn" type="submit" value="検索" />
               
-        </form></li>
-       
-       <li>
-        <button id="mic" type="submit" onclick ="record()">
-          <i class="fa fa-microphone fa-2x"></i>
-        </button></li>
-        
-        <li>
-         <span>
+      </form>
+    
          　<select id="select_gengo">
               <option value=0>英語音声入力</option>
               <option value=1>日本語音声入力</option>
-            </select>
+            </select></li>
             
-            </span>
-            
-      </li>
+            <button id="mic" type="submit" onclick ="record()">
+          <i class="fa fa-microphone fa-3x"></i>
+       </button>
+         
+    </ul>  
       
-        
-      
-    </ul>
-  
-     <ul>
+    <ul>
         
          <p class="navbar-text navbar-right">
           <a class="toplink" href="/dynamic_pages/home">トップページへ</a>
