--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -77,7 +77,7 @@
   function record() {
      　
     var ejval = $("#select_gengo").val(); //音声入力言語値取得 0 :英 1 :日
-    alert(ejval);
+   // alert(ejval);
    //var ejval= $("input[name='ej']:checked").val();　//
     
     if ( ejval==0 ) {
