--- a/app/views/dynamic_pages/e100.html.erb
+++ b/app/views/dynamic_pages/e100.html.erb
@@ -73,10 +73,13 @@
  
 　</script>
 　
+　<div class="hogewaku" > 
     <div class="main">
        <div class="digg_pagination">
        <%= will_paginate @masters %> 
      </div>
+     
+
 
 <ul class="hoge">
   
@@ -95,6 +98,8 @@
      <% end %>
   
 </ul>
+</div>
+</div>  
 </div>
  
 <div class="digg_pagination">
