--- a/app/views/dynamic_pages/e100.html.erb
+++ b/app/views/dynamic_pages/e100.html.erb
@@ -65,11 +65,11 @@
 
  <script>
  //コピー防止
-      window.onload = function() {
-                    document.body.oncopy = function () {
-                        return false;
-                    }
-       }
+      //window.onload = function() {
+                    //document.body.oncopy = function () {
+                       // return false;
+                    //}
+      // }
        
        
 　</script>
@@ -103,7 +103,7 @@
 </div>  
 </div>
  
-<div class="digg_pagination">
+ <div class="digg_pagination">
    <%= will_paginate @masters %>  
  </div>
  
