--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,13 +30,13 @@
               
       </form>
     
-         　<select id="select_gengo">
+         　<!--<select id="select_gengo">
               <option value=0>英語音声入力</option>
               <option value=1>日本語音声入力</option>
-            </select></li>
+            </select></li>->
             
-            <button id="mic" type="submit" onclick ="record()">
-          <i class="fa fa-microphone fa-3x"></i>
+            <!--<button id="mic" type="submit" onclick ="record()">
+          <i class="fa fa-microphone fa-3x"></i>-->
        </button>
          
     </ul>  
